<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.activities.CreateAccountActivity" >

      <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="25dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/lblPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="55dp"
        android:text="@string/pass" />
    
       <TextView
        android:id="@+id/lblPassRe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="85dp"
        android:text="@string/passRe" />

    <EditText
        android:singleLine="true"
        android:id="@+id/fldPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPassword" />
    
    <EditText
        android:singleLine="true"
        android:id="@+id/fldPassRe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:singleLine="true"
        android:id="@+id/fldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnCreate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPass"
        android:layout_below="@+id/fldPass"
        android:layout_marginTop="70dp"
        android:text="@string/btnCreate" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCreate"
        android:layout_below="@+id/btnCreate"
        android:layout_marginTop="64dp"
        android:text="status" />

    <CheckBox
        android:id="@+id/chbLoginOnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fldPassRe"
        android:layout_marginLeft="17dp"
        android:checked="true"
        android:text="Login on create" />

</RelativeLayout>
